--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "openai": "^3.2.1",
     "vanta": "^0.5.24",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
